feat(Docker): changing user management to port 8085
