# Backend/Services/Discord/routes/GetReaction.go
@@ -6,16 +6,17 @@ import (
 
 	"github.com/gin-gonic/gin"
 )
+
 // Discord Reactions
 // @Summary send all the reactions
 // @Description send all the reactions available on the discord services as an object arrays with the names and the object needed
 // @Tags Discord Area
 // @Accept json
 // @Produce json
-// @Success 200 {object} map[string]string "Response is the received data"
+// @Success 200 {object} models.ReactionGet "Response is the received data"
 // @Failure 400 {object} map[string]string "Invalid request it contains the error"
 // @Failure 500 {object} map[string]string "Internal error it contains the error"
 // @Router /reactions [get]
 func GetReactions(c *gin.Context) {
-	c.JSON(http.StatusOK, gin.H{"reactions": gin.H{"Send message on channel":models.ReactionGet{}}})
+	c.JSON(http.StatusOK, gin.H{"reactions": gin.H{"Send message on channel": models.ReactionGet{2, 0, "", ""}}})
 }
